[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100

[tool.codespell]
ignore-words-list = "alog"

[tool.coverage.run]
branch = true
omit = ["*/starlite_saqlalchemy/scripts.py", "*/starlite_saqlalchemy/lifespan.py", "tests/*"]
relative_files = true
source_pkgs = ["starlite_saqlalchemy", "pytest_starlite_saqlalchemy"]

[tool.coverage.paths]
others = [".", "*/starlite_saqlalchemy", "*/pytest_starlite_saqlalchemy"]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  'raise NotImplementedError',
]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Peter Schutt <peter.github@proton.me>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Framework :: Pytest",
]
description = "Starlite config plugin with SAQ and SQLAlchemy boilerplate"
keywords = ["api", "rest", "http", "asgi", "starlite", "saq", "sqlalchemy", "plugin", "python"]
license = "MIT"
name = "starlite-saqlalchemy"
packages = [
  {include = "starlite_saqlalchemy", from = "src"},
  {include = "pytest_starlite_saqlalchemy", from = "src"},
]
readme = "README.md"
repository = "https://github.com/topsport-com-au/starlite-saqlalchemy"
version = "0.29.0"

[tool.poetry.dependencies]
asyncpg = "*"
httpx = "*"
msgspec = "*"
pydantic = "*"
python = ">=3.10,<3.12"
python-dotenv = "*"
starlite = "*"
structlog = "*"
tenacity = "*"
uvicorn = "*"
uvloop = "*"

# Optionals
hiredis = {version = "*", optional = true}
redis = {version = "*", optional = true}
saq = {version = "^0.9.1", optional = true}
sentry-sdk = {version = "*", optional = true}
sqlalchemy = {version = ">=2.0.4", optional = true}

[tool.poetry.extras]
all = ["redis", "hiredis", "saq", "sentry-sdk", "sqlalchemy"]
cache = ["redis", "hiredis"]
sentry = ["sentry-sdk"]
sqlalchemy = ["sqlalchemy"]
worker = ["saq", "hiredis"]

[tool.poetry.plugins."pytest11"]
pytest_starlite_saqlalchemy = "pytest_starlite_saqlalchemy"

[tool.poetry.plugins."console_scripts"]
run-app = "starlite_saqlalchemy.scripts:run_app"

[tool.poetry.urls]
Bugs = "https://github.com/topsport-com-au/starlite-saqlalchemy/issues"
GitHub = "https://github.com/topsport-com-au"

[tool.pycln]
all = true

[tool.pydocstyle]
add-ignore = "D106,D205,D212,D415"
add-select = "D401,D404,D417"
convention = "google"

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-config", # Plugin are enabled in tests/conftest.py to control loading order.
  "-p",
  "no:pytest_starlite_saqlalchemy",
  "-p",
  "no:pytest_dotenv",
]
asyncio_mode = "auto"
env_files = ["tests.env"]
testpaths = ["tests/unit"]

[tool.pylint.main]
disable = [
  "line-too-long",
  "no-self-argument",
  "too-few-public-methods",
  "too-many-arguments",
]
enable = "useless-suppression"
extension-pkg-whitelist = ["asyncpg", "msgspec", "pydantic"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
major_on_zero = false
upload_to_release = true
upload_to_repository = true
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/starlite_saqlalchemy/__init__.py:__version__"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
]
fix = true
ignore = [
  'B008',
  'EM102',
  'A002',
  'A003',
  'B009',
  'C408',
  'C417',
  "D100",
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  'E501',
  "N818",
  'EM101',
  'T201',
  'ERA001',
  "E999",
  'PLR0913',
  'TRY003',
]
line-length = 120
select = [
  'B',
  'C',
  'D',
  'E',
  'F',
  'N',
  'W',
  'I',
  'C90',
  'UP',
  'S', # 'ANN', BLE
  'YTT', # 'FBT',
  'COM',
  'DJ',
  'A',
  'C4',
  'T10',
  'EM',
  'T20',
  'ICN', # 'ISC',
  'Q',
  'DTZ', # 'ARG',
  'RET',
  'SIM',
  'PD',
  'ERA',
  'PLC',
  'PLE',
  'PLR',
  'PLW', # 'PIE',
  'RUF',
  'EXE',
  'G',
  'RSE',
  'PTH',
  'PD',
  'NPY',
  'TCH',
  'TID',
  'TRY',
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["src", "tests/"]
target-version = "py310"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
[tool.ruff.pep8-naming]
classmethod-decorators = [
  'classmethod',
  'pydantic.validator',
  'pydantic.root_validator',
  'sqlalchemy.ext.declarative.declared_attr',
]

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401', 'D104']
"tests/*.py" = ['D103', 'S101', 'D104', 'D107', 'D205']

[tool.ruff.isort]
known-first-party = ['starlite_saqlalchemy', 'pytest_starlite_saqlalchemy', 'tests']
